--- a/src/main/resources/message_es_PE.properties
+++ b/src/main/resources/message_es_PE.properties
@@ -1,10 +1,17 @@
 #Header-------------------------------------<spring:message code="label.home" />
 #Barra de navegacion horizontal
-label.home = INICIO
-label.aboutus = NOSOTROS
-label.products = PRODUCTOS
-label.services = SERVICIOS
-label.contact = CONTACTO
+label.home = Inicio
+label.aboutus = Nosotros
+label.products = Productos
+label.services = Servicios
+label.contact = Contacto
+label.history = Historia
+label.news = Novedades
+label.thenew = Lo Nuevo
+label.archieved = Archivo
+label.testimonials = Testimonios
+label.emailAddress = gerencia@greypower.org
+
 
 #Selector de Idioma
 label.spanish = Espa&ntilde;ol
@@ -16,6 +23,11 @@ label.backToTop = Retornar Arriba
 label.poweredBy = Desarrollado por 
 label.greyPower =  GreyPower
 label.year =  &copy; 2014
+label.followus =  Siguenos en
+label.email =  Email
+label.privacyPolicy = Privacy policy
+label.ourWork = Nuestro trabajo
+
 #----------------------------------------------------
 
 #Content----------------------------------------------
